<resources>
    <string name="app_name">Soccer Quiz</string>
    <string name="background_img">background_img</string>
    <string name="soccer_quiz">Soccer Quiz</string>
    <string name="lets_play">Lets Play!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ball">ball</string>
    <string name="football_field_image">football_field_image</string>
    <string name="pass">Pass!</string>
    <string name="question">Question</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>