<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MissFragment">

    <data>

        <variable
            name="missFrag"
            type="com.example.soccerquiz.MissFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/missLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewFottballField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/football_field_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_football_field"
        app:layout_constraintBottom_toTopOf="@+id/guidelineForFootballField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForFootballField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="249dp" />

    <ImageView
        android:id="@+id/imageViewBall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="90dp"
        android:contentDescription="@string/ball"
        android:src="@drawable/ic_smiley"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFottballField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitleQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alex_brush"
        android:text="@string/soccer_quiz"
        android:textColor="@color/white"
        android:textSize="58sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/buttonPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/soccer_background"
            android:fontFamily="@font/artifika"
            android:text="@string/pass"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewFottballField"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>