<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalFragment">

    <data>

        <variable
            name="goalFrag"
            type="com.example.soccerquiz.GoalFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewFottballField"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/football_field_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_football_goal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/textViewTitleQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/alex_brush"
            android:text="@string/soccer_quiz"
            android:textColor="@color/white"
            android:textSize="58sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/buttonPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/soccer_background"
            android:fontFamily="@font/artifika"
            android:text="@string/pass"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleQuiz" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>